--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Teste</title>
 </head>
 <body>
-    <button>Clique Aqui!</button>
+    <button id="btn">Clique Aqui!</button>
+
+    <script src="app.js"></script>
 </body>
 </html>
