--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Teste</title>
-</head>
-<body>
-    <button id="btn">Clique Aqui!</button>
+  </head>
+  <body>
+    <button id="btn" onclick="handleClick">Clique Aqui!</button>
 
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
